# scfetch

./: CMakeLists.txt  README.md  main.cpp
logos/: arch.txt  default.txt
